Overhaul Configurations, Update Docs and Blog - Update sidebars, nav, and landing page to our design - Remove template files - Minor updates to images

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,8 +1,8 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+tzhen002:
+  name: Tobin Zheng
+  title: Front End Engineer
+  url: https://github.com/tzhen002
+  image_url: https://github.com/tzhen002.png
 
 yangshun:
   name: Yangshun Tay
